@@ -1,3 +1,11 @@
+2006-08-07  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* codegen/argtypes.py:
+	* codegen/codegen.py:
+	* codegen/reversewrapper.py:
+	Introduce new ArgTypeError exceptions, use them everywhere to
+	raise catch codegen errors.  Bare except: clauses are gone now.
+
 2006-08-07  Johan Dahlin  <jdahlin@async.com.br>
 
 	* docs/Makefile.am ($(HTML_DATA)): Fix parallel build 
